--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-winston",
-  "version": "1.0.0-rc2",
+  "version": "1.0.0-rc.2",
   "main": "index.js",
   "keywords": [
     "trailpack",
