--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-winston",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "main": "index.js",
   "keywords": [
     "trailpack",
@@ -19,6 +19,7 @@
     "trails": "> 3.1.0"
   },
   "devDependencies": {
+    "trails": "^3",
     "eslint": "^4",
     "eslint-config-trails": "^3",
     "mocha": "^3"
